--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
@@ -35,16 +35,21 @@ dependencies {
     implementation 'com.github.yangjie10930:EpMedia:v0.9.5'
     implementation 'pub.devrel:easypermissions:0.3.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    // implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'
     implementation 'com.danikula:videocache:2.7.0'
     //==================mp4parser====================
     implementation 'com.googlecode.mp4parser:isoparser:1.1.21'
-
-
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
     implementation 'com.qmuiteam:qmui:1.4.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.1'
+    implementation files('libs/jackson-databind-2.10.0.jar')
+    implementation files('libs\\esdk-obs-android-3.20.3.jar')
+    implementation files('libs\\jackson-annotations-2.10.0.jar')
+    implementation files('libs\\jackson-core-2.10.0.jar')
+    implementation files('libs\\java-xmlbuilder-1.2.jar')
+    implementation 'com.kongzue.dialog_v3:dialog:3.2.2'
 
-    implementation  'com.android.support:design:28.0.0'
-    implementation  'com.google.code.gson:gson:2.8.2'
-    implementation("com.squareup.okhttp3:okhttp:4.2.1")
 }
